# fixed-q

./: .travis.yml  LICENSE  README.md  fixed-q.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
Data/Fixed/: Q.hs
tests/: Main.hs
